add_subdirectory(AST)
add_subdirectory(Config)
add_subdirectory(Core)
add_subdirectory(Diagnostics)
add_subdirectory(Filters)
add_subdirectory(IRFrontend)
add_subdirectory(JunkDetection)
add_subdirectory(Misc)
add_subdirectory(Mutation)
add_subdirectory(Mutators)
add_subdirectory(Parallelization)
add_subdirectory(Reporters)
add_subdirectory(Runner)
add_subdirectory(SourceManager)
