# This file makes rust/ a Bazel package so that .bzl files here can be loaded.

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_binary(
    name = "update_cargo_lockfile",
    srcs = ["update_lockfile.sh"],
    args = ["$(location @rules_rust//rust/toolchain:current_cargo_files)"],
    data = ["@rules_rust//rust/toolchain:current_cargo_files"],
)

sh_test(
    name = "rust_toolchain_versions_in_sync",
    srcs = ["check_toolchain_versions.sh"],
    args = [
        "$(location //:MODULE.bazel)",
        "$(location Cargo.toml)",
    ],
    data = [
        "Cargo.toml",
        "//:MODULE.bazel",
    ],
)

sh_test(
    name = "cargo_lockfile_up_to_date",
    srcs = ["check_lockfile.sh"],
    args = [
        "$(location @rules_rust//rust/toolchain:current_cargo_files)",
        "$(location @rules_rust//rust/toolchain:current_rustc_files)",
        "$(location Cargo.toml)",
        "$(location Cargo.lock)",
    ],
    data = [
        "Cargo.lock",
        "Cargo.toml",
        "@rules_rust//rust/toolchain:current_cargo_files",
        "@rules_rust//rust/toolchain:current_rustc_files",
    ],
    tags = ["local"],
)
