[package]
name = "mull-deps"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
colored = "2"
console = "0.15"
cxx = "1"
cxx-gen = "0.7"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
indoc = "2.0"
libc = "0.2"
llvm_profparser = "0.8"
object = { version = "0.36", features = ["read"] }
proc-macro2 = "1"
rayon = "1.10"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = { version = "0.8", features = ["derive", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
unicode-width = "0.2"
wait-timeout = "0.2"
