[package]
name = "mull-deps"
version = "0.0.0"
edition = "2024"
rust-version = "1.94.0"
publish = false

[lib]
path = "lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
colored = "3"
console = "0.16"
cxx = "1"
cxx-gen = "0.7"
git2 = { version = "0.20", default-features = false, features = [
    "vendored-libgit2",
] }
indoc = "2"
libc = "0.2"
llvm_profparser = "0.10"
object = { version = "0.38", features = ["read"] }
proc-macro2 = "1"
rayon = "1"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
schemars = { version = "1", features = ["derive", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde-sarif = "0.8.0"
serde_json = "1"
serde_yaml = "0.9"
unicode-width = "0.2"
wait-timeout = "0.2"
