load("@mull_package_info//:mull_package_info.bzl", "MULL_VERSION")
load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "mull-core",
    srcs = [
        "src/config.rs",
        "src/diagnostics.rs",
        "src/lib.rs",
        "src/utils.rs",
    ],
    rustc_env = {
        "CARGO_PKG_VERSION": MULL_VERSION,
    },
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:clap",
        "@crates//:colored",
        "@crates//:schemars",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
    ],
)
