load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "mull-tasks",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//rust/mull-core",
        "@crates//:console",
        "@crates//:indicatif",
        "@crates//:libc",
        "@crates//:rayon",
    ],
)
