load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "mull-reporter",
    srcs = [
        "mull-reporter.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//rust/mull-core",
        "//rust/mull-reporters",
        "//rust/mull-state",
        "@crates//:clap",
        "@crates//:serde_yaml",
    ],
)
