add_subdirectory(boosttest_test)
add_subdirectory(custom_test)
add_subdirectory(google_test)
add_subdirectory(cpputest_test)
add_subdirectory(junk_detection)
add_subdirectory(mutators)
add_subdirectory(simple_test)
add_subdirectory(hardcode)
add_subdirectory(exceptions)
add_subdirectory(mutation_filters)
